# PogufiLoader

./: .clang-format  CMakeLists.txt  README.md
edk2/: CMakeLists.txt  edk2defs.cmake
src/: CMakeLists.txt  main.c
src/common/: err.h
src/lib/: disk.c  disk.h  gop.c  gop.h  memorymap.c  memorymap.h
src/protos/: eggload.c  eggload.h
